--- a/src/supply_chain_continious_model_frontend/src/index.scss
+++ b/src/supply_chain_continious_model_frontend/src/index.scss
@@ -1,7 +1,11 @@
-body {
-  font-family: sans-serif;
-  font-size: 1.5rem;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+// body {
+//   font-family: sans-serif;
+//   font-size: 1.5rem;
+// }
 
 img {
   max-width: 50vw;
