--- a/src/supply_chain_continious_model_frontend/src/index.scss
+++ b/src/supply_chain_continious_model_frontend/src/index.scss
@@ -1,41 +1,33 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-// body {
-//   font-family: sans-serif;
-//   font-size: 1.5rem;
-// }
-
-img {
-  max-width: 50vw;
-  max-height: 25vw;
-  display: block;
-  margin: auto;
+@layer base {
+  html {
+    font-family: 'Inter', sans-serif;
+    line-height: 1.3;
+  }
+  table {
+  }
+  th,
+  td {
+    @apply border-y border-gray-200 px-2.5 py-3 text-left text-sm;
+  }
+  thead {
+    @apply bg-neutral-100;
+  }
+  th {
+    @apply font-semibold;
+  }
+  a {
+    @apply text-sky-500 hover:underline;
+  }
 }
 
-form {
-  display: flex;
-  justify-content: center;
-  gap: 0.5em;
-  flex-flow: row wrap;
-  max-width: 40vw;
-  margin: auto;
-  align-items: baseline;
-}
-
-button[type="submit"] {
-  padding: 5px 20px;
-  margin: 10px auto;
-  float: right;
-}
-
-#greeting {
-  margin: 10px auto;
-  padding: 10px 60px;
-  border: 1px solid #222;
-}
-
-#greeting:empty {
-  display: none;
-}
+/* html,
+body,
+:root {
+  height: 100%;
+} */
